--- a/kaiyo/my_config/my_config.ini
+++ b/kaiyo/my_config/my_config.ini
@@ -1,11 +1,28 @@
-
+# このファイルはプログラムスタート時にmy_chech.py によって読み込まれる。主にスタートの動作を設定するファイル。
 [set_mode]
+# センサの値をリセットする関数
 set_send_reboot = True
+
+# プログラムスタート時にバッテリの電圧をチェックするかどうか
 set_battery_check = True
+
+# センサのログをテキストファイルに残すかどうか
 set_sensor_log = True
+
+# GPSのログを残すかどうか
 set_gps_log = False
+
+# カメラを起動するかどうか
 set_camera = False
+
+# プログラムスタート時にモータの動作チェックをするかどうか
 set_operation_check = False
+
+# プログラムスタートにマグネットスイッチの入力を待つかどうか
 set_start_mgs = False
+
+# プロポを使って制御するときは True にする
 set_send_pwm = False
+
+# プログラムスタート時にカウントダウンする回数
 set_countdown = 3
